--- a/scss/modules/reddit/_reddit.scss
+++ b/scss/modules/reddit/_reddit.scss
@@ -16,7 +16,7 @@
 //-reddit modules
 @import "modules/res";
 @import "modules/top-bar";
-@import "modules/slide-menu";
+/* @import "modules/slide-menu"; */
 @import "modules/header";
 @import "modules/tabmenu";
 @import "modules/flair";
