--- a/scss/modules/reddit/modules/_submit-page.scss
+++ b/scss/modules/reddit/modules/_submit-page.scss
@@ -2,6 +2,8 @@
 // Submit Page
 // ==========================================================================
 
+$header-height: 200px;
+
 .submit-page .content {
   margin-top:$header-height+15;
   margin-bottom: 10px;
