--- a/scss/modules/reddit/reddit.css
+++ b/scss/modules/reddit/reddit.css
@@ -3637,7 +3637,7 @@ a[href="/r/austria"]:before {
   display: none; }
 
 div.titlebox span.number:after {
-  content: " blueshirts,"; }
+  content: " newbies,"; }
 
 /* .link.stickied:before {
   content: url($sticky-img);
