--- a/scss/vars/_colors.scss
+++ b/scss/vars/_colors.scss
@@ -22,11 +22,11 @@ $walmart-blue: #007cc2;
 $palettes: (
     light: (
       border: #eee,
-      txt: #fff,
-      link: #fff,
+      txt: #000,
+      link: #000,
       link-hover: #000,
-      headers: #fff,
-      body-bg: #f9f9fa,
+      headers: #000,
+      body-bg: #ffe4af,
       header-bg: #000,
       sidebar-bg: transparent,
       content-bg: transparent,
