--- a/scss/modules/_docs.scss
+++ b/scss/modules/_docs.scss
@@ -14,9 +14,11 @@ body.docs {
     }
   }
   p span {
-    background:$white;
-    color:$red;
-    padding:0 0.15em;
+    background:$primary;
+    color:$white;
+    font-weight:bold;
+    padding: 0.25em;
+    border-radius: 2px;
   }
   h2 {
     @include fp(font-size, 30, 50);
@@ -54,7 +56,7 @@ body.docs {
   .contain {
     max-width: 45em;
     margin:2em auto;
-    background:$primary;
+    background:$white;
     padding: 2em;
   }
   .contain p {
@@ -75,7 +77,7 @@ body.docs {
   }
   footer {
     p {
-      color:$grey;
+      color:$black;
       font-size:12px;
       text-transform: lowercase;
     }
