--- a/scss/modules/reddit/global/_copy.scss
+++ b/scss/modules/reddit/global/_copy.scss
@@ -11,7 +11,7 @@ $button2-copy: "Twitter";
 $button3-copy: "Instagram";
 $button4-copy: "Youtube";
 
-$user-word: " blueshirts,";
+$user-word: " newbies,";
 
 $unsubscribe-copy: "Unsubscribe =(";
 $rules-copy: "Please remember to read the rules. LGR!";
