Fixing font awesome, updated mixins, fixing autoprefixer.

--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -1,6 +1,19 @@
 // burger
 // _mixins.scss
 
+// Flex Center
+// Flex-center option
+// $set-flex: flex, inline-flex
+// $direction: column, row etc
+@mixin flex-center($set-flex, $direction) {
+	display:$set-flex;
+	flex-direction:$direction;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+}
+
+
 /// Shorthand for placeholder text.
 @mixin placeholder($placeholder-color, $placeholder-font) {
   &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
