--- a/scss/components/carousels/_owl.scss
+++ b/scss/components/carousels/_owl.scss
@@ -1,9 +1,7 @@
 // ==========================================================================
-// Code
+// Owl Carousel Module
 // ==========================================================================
 
-code {
-  vertical-align: $code-vertical-align;
-  padding: $code-padding;
-  background: $code-bg-color;
+.owl-nav {
+  display: none;
 }
