--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,1 +1,11 @@
 // footer layout
+
+//-footer
+$footer-padding: 1em 10% 1em 12%;
+$footer-col-padding: 1em;
+$footer-height: 70px;
+$copyright-padding: 30px 0;
+
+footer {
+  clear: both;
+}
