--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,5 +1,11 @@
 // header layout
 
+//-header
+$header-height: 75px;
+$header-col-padding: 7px;
+$header-padding: 0 30px;
+
+
 .header {
   width: 100%;
   padding: 1em;
