--- a/scss/modules/wordpress/_wp-menu.scss
+++ b/scss/modules/wordpress/_wp-menu.scss
@@ -1,11 +1,3 @@
 // ==========================================================================
-// Forms
+// Wp Menu
 // ==========================================================================
-
-input[type="text"], select {
-  border:1px solid $black;
-  &.error {
-    background-color:$red;
-    border:1px solid $red;
-  }
-}
