--- a/scss/vars/_colors.scss
+++ b/scss/vars/_colors.scss
@@ -28,7 +28,7 @@ $palettes: (
       headers: #000,
       body-bg: #ffe4af,
       header-bg: #000,
-      sidebar-bg: transparent,
+      sidebar-bg: #fff,
       content-bg: transparent,
       node-bg: #5d9e47,
       footer-bg: #000
