--- a/scss/vars/_settings.scss
+++ b/scss/vars/_settings.scss
@@ -35,5 +35,4 @@ $footer-list-reset: true;
 $footer-list-inline: true;
 
 //-sidebar
-$add-sidebar: false;
-$fixed-sidebar: true;
+$fixed-sidebar: false;
