--- a/scss/components/carousels/_slick.scss
+++ b/scss/components/carousels/_slick.scss
@@ -1,11 +1,3 @@
 // ==========================================================================
-// Forms
+// Slick Carousel Module
 // ==========================================================================
-
-input[type="text"], select {
-  border:1px solid $black;
-  &.error {
-    background-color:$red;
-    border:1px solid $red;
-  }
-}
