Parallax mixin, init.

--- a/scss/components/components.scss
+++ b/scss/components/components.scss
@@ -14,6 +14,7 @@
 @import 'labels';
 @import 'logo';
 @import 'modals';
+@import 'parallax';
 @import 'print';
 @import 'progress';
 @import 'spinner';
