--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -18,7 +18,7 @@
   @include transition($hover-time all ease-in-out);
 }
 
-// Some Preset Button classes
+// Preset Button classes
 $btn-colors:  (
   red: $red,
   green: $green,
