--- a/scss/modules/reddit/modules/_sidebar.scss
+++ b/scss/modules/reddit/modules/_sidebar.scss
@@ -30,7 +30,7 @@ div.titlebox span.number:after {
 .top-bar {
   position:fixed;
   width:100%;
-  background:$rangers-blue;
+  background:$blue;
   height:50px;
 }
 
