Updated ionic unit math.

--- a/scss/modules/ionic/ionic.scss
+++ b/scss/modules/ionic/ionic.scss
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 
-/* @import
+ @import
   // Ionicons
-  "ionicons/ionicons.scss",
 
   // Variables
   "mixins",
@@ -51,4 +50,3 @@
   // Animations
   "animations",
   "transitions";
- */
