--- a/scss/modules/ionic/_variables.scss
+++ b/scss/modules/ionic/_variables.scss
@@ -41,7 +41,7 @@ $base-color:                      #000 !default;
 $link-color:                      $positive !default;
 $link-hover-color:                darken($link-color, 15%) !default;
 
-$content-padding:                 10px !default;
+$ionic-content-padding:                 10px !default;
 
 $padding-base-vertical:           6px !default;
 $padding-base-horizontal:         12px !default;
