Fancy burger menu mixin, normalize.

--- a/scss/burger.scss
+++ b/scss/burger.scss
@@ -7,6 +7,8 @@
 
 // Libs
 @import 'libs/modernizr';
+@import 'libs/normalize';
+@import 'libs/burger-menu';
 @import 'libs/animate/animate'; // Animate.scss
 @import 'libs/fa/font-awesome'; // Fontawesome.scss
 
