--- a/scss/modules/boiler/layout/_header.scss
+++ b/scss/modules/boiler/layout/_header.scss
@@ -1,1 +1,17 @@
 // header
+
+
+.menu-button {
+	display: inline-block;
+	padding: .5em;
+	background-color: #fafafa;
+	border: 1px solid #ccc;
+}
+
+.burger-icon {
+	@include burger(25px, 3px, 5px, #444);
+}
+
+.menu-button.is-active .burger-icon {
+	@include burger-to-cross;
+}
