Brand colors plugin.

--- a/scss/burger.scss
+++ b/scss/burger.scss
@@ -11,6 +11,7 @@
 @import 'libs/burger-menu';
 @import 'libs/animate/animate'; // Animate.scss
 @import 'libs/fa/font-awesome'; // Fontawesome.scss
+/* @import '../node_modules/brand-colors/dist/latest/scss/brand-colors.latest.scss'; */
 
 // Base
 @import 'base/base';
