--- a/scss/modules/boiler/_boiler.scss
+++ b/scss/modules/boiler/_boiler.scss
@@ -1,7 +1,8 @@
 // boiler
 
 @import 'layout/header';
+@import 'layout/nav';
 @import 'layout/content';
 @import 'layout/footer';
 
-@include boiler();
+@include burgerDocs();
