--- a/scss/vars/_global.scss
+++ b/scss/vars/_global.scss
@@ -75,17 +75,18 @@ $heading-font: $default-font;
 $nav-font: $default-font;
 
 //-standard colors
-$black: #000;
-$blue: #495B7E;
+$black: #2E282A;
+$blue: #17BEBB;
 $white: #fff;
-$red: #ca2026;
-$yellow: #ffd850;
-$purple: #6b1769;
-$pink: #eb2048;
-$green: #4ebd45;
-$orange: #ff9e04;
+$red: #EF3E36;
+$yellow: #f5c100;
+$purple: #9b56b8;
+$pink: #FAD8D6;
+$green: #22ce6d;
+$orange: #e87d00;
 $grey: #a6a6a6;
 $brown: #614126;
+$lime: #32cd32;
 
 $primary: #806126;
 $secondary: #d84f25;
