--- a/scss/modules/docs/pages/_home.scss
+++ b/scss/modules/docs/pages/_home.scss
@@ -1,5 +1,5 @@
 @mixin docs() {
-  body {
+  body.burger-docs {
     background:$color__body-bg;
     @include setLayout('triple');
     /* For demo only */
@@ -43,7 +43,7 @@
     }
 
     .item {
-      background-color: $tertiary;
+      background-color: $blue;
       border-radius: 2px;
       display: block;
       height: 2em;
@@ -52,6 +52,8 @@
     }
     hr {
       margin: 2em auto;
+      opacity:0.4;
+      display: none;
     }
     .contain {
       max-width: 45em;
