--- a/scss/vars/_colors.scss
+++ b/scss/vars/_colors.scss
@@ -19,17 +19,18 @@ $insta-blue: #455b84;
 $walmart-blue: #007cc2;
 
 $palettes: (
-    funk: (
+    burger: (
       border: #eee,
       txt: #000,
       link: #000,
       link-hover: #000,
       headers: #000,
-      body-bg: #ffe4af,
+      body-bg: #EDB88B,
       header-bg: #000,
       sidebar-bg: #fff,
       content-bg: transparent,
-      node-bg: #5d9e47,
+      node-bg: #815632,
+      card-bg: #fff,
       footer-bg: #000
     ),
     classic: (
@@ -68,9 +69,9 @@ $palettes: (
 /// Social Color Palette Map
 $socials: map-get($palettes, 'socials');
 
-/// Theme Color Palette Map To Use - options: funk | classic
+/// Theme Color Palette Map To Use - options: burger | classic
 /// @type Color
-$current_theme: 'funk';
+$current_theme: 'burger';
 
 /// Border Color
 /// @type Color
@@ -102,6 +103,9 @@ $color__content-bg: clr($current_theme, content-bg);
 /// Node Background Color
 /// @type Color
 $color__node-bg: clr($current_theme, node-bg);
+/// Card Background Color
+/// @type Color
+$color__card-bg: clr($current_theme, card-bg);
 /// Footer Background Color
 /// @type Color
 $color__footer-bg: clr($current_theme, footer-bg);
